--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
+dist
+node_modules
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
-
 # Test binary, built with `go test -c`
 *.test
 
@@ -15,4 +16,3 @@
 # vendor/
 
 # Go workspace file
-go.work
