--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ vendor
 # Test binary, built with `go test -c`
 *.test
 
+!local_test.exe
+!localsetup.exe
+
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
